--- a/package.json
+++ b/package.json
@@ -17,11 +17,7 @@
   },
   "homepage": "https://github.com/manav1911/FullStack-Course#readme",
   "dependencies": {
-    "node-fetch": "^2.6.11",
-    "uninstall": "0.0.0",
-    "uuid": "^9.0.0"
+    
   },
-  "devDependencies": {
-    "nodemon": "^2.0.22"
-  }
+  "devDependencies": {}
 }
