--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   },
   "homepage": "https://github.com/manav1911/FullStack-Course#readme",
   "dependencies": {
-    
+    "axios": "^1.4.0",
+    "express": "^4.18.2"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  }
 }
