--- a/package.json
+++ b/package.json
@@ -17,9 +17,8 @@
   },
   "homepage": "https://github.com/manav1911/FullStack-Course#readme",
   "dependencies": {
-    "node-fetch": "^2.6.11",
-    "uninstall": "0.0.0",
-    "uuid": "^9.0.0"
+    "axios": "^1.4.0",
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
