--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
         "axios": "^1.4.0",
         "cors": "^2.8.5",
         "express": "^4.18.2",
+        "jsonwebtoken": "^9.0.0",
         "uuid": "^9.0.0"
     },
     "devDependencies": {
