--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "mongodb-client-encryption": "^2.8.0",
     "mongoose": "^7.2.3",
     "morgan": "^1.10.0",
     "winston": "^3.9.0"
